--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Text Analysis</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        /* Basic CSS for styling */
+        body { font-family: Arial, sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; background-color: #f0f0f0; }
+        .container { background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
+        textarea { width: 100%; height: 100px; margin-bottom: 10px; }
+        button { padding: 10px 20px; background: #007bff; color: #fff; border: none; border-radius: 4px; cursor: pointer; }
+        #result { margin-top: 10px; white-space: pre-wrap; }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -13,7 +20,30 @@
         <button id="analyzeButton">Analyze</button>
         <div id="result"></div>
     </div>
+    <script>
+        document.getElementById('analyzeButton').addEventListener('click', async () => {
+            const text = document.getElementById('inputText').value.trim();
+            if (!text) return alert('Please enter some text.');
 
-    <script src="script.js"></script>
+            const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
+            const apiUrl = 'https://language.googleapis.com/v1/documents:analyzeSentiment?key=YOUR_API_KEY';
+
+            try {
+                const response = await fetch(proxyUrl + apiUrl, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ document: { type: 'PLAIN_TEXT', content: text } }),
+                });
+
+                if (!response.ok) throw new Error('Network response was not ok');
+
+                const result = await response.json();
+                document.getElementById('result').textContent = JSON.stringify(result, null, 2);
+            } catch (error) {
+                console.error('Error:', error);
+                document.getElementById('result').textContent = 'An error occurred. Please try again.';
+            }
+        });
+    </script>
 </body>
 </html>
