--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             if (!text) return alert('Please enter some text.');
 
             const proxyUrl = 'https://cors-anywhere.herokuapp.com/';
-            const apiUrl = 'https://language.googleapis.com/v1/documents:analyzeSentiment?key=YOUR_API_KEY';
+            const apiUrl = 'https://language.googleapis.com/v1/documents:analyzeSentiment?key=AIzaSyB1K9sihDyjnesjm5mpmlTBJZ_GuVy4nqc';
 
             try {
                 const response = await fetch(proxyUrl + apiUrl, {
