--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,9 +3,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fatima's Delights</title>
-  <link rel="stylesheet" href="../bootstrap5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../fontawsome6/css/all.css">
-    <link rel="stylesheet" href="style.css">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <!-- Navigation Bar -->
@@ -95,8 +95,9 @@
     </div>
   </footer>
 
-  <script src="../bootstrap5/js/bootstrap.bundle.min.js"></script>
+  
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
 
-<script src='../fontawsome6/js/all.js'></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/js/all.min.js"></script>
 </body>
 </html>
