--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fatima's Delight</title>
-  
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-qQnMw6mP6UOpuVLI56OaHDJMWPjWnVEXlVVMy6zNmz1K+I8OcxDa5Y1nb+K3W5eq" crossorigin="anonymous">
-  
-  <!-- Font Awesome 6.5.0 CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
-  <!-- Custom CSS -->
+  <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css">
+<link rel="stylesheet" href="fontawsome6/css/all.css">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -38,24 +31,26 @@
     </div>
   </nav>
 
-  <!-- Jumbotron Section -->
-  <div class="jumbotron jumbotron-fluid bg-white text-dark">
-    <div class="container py-5">
-      <h1 class="display-4 font-weight-bold">
-        <img class="img-fluid" src="img/wel.png" alt="Product Image">Welcome to Fatima's Delight!
-      </h1>
-      <hr class="my-4 bg-light">
-      <p class="lead mb-4">Indulge in our handcrafted sweets and delightful experiences.</p>
-    </div>
+
+
+<div class="jumbotron jumbotron-fluid bg-white text-dark">
+  <div class="container py-5">
+    <h1 class="display-4 font-weight-bold">
+                <img class="img-fluid" src="img/wel.png" alt="Product Image">Welcome to Fatima's Delight!</h1>
+    <hr class="my-4 bg-light">
+    <p class="lead mb-4">Indulge in our handcrafted sweets and delightful experiences.</p>
   </div>
+</div>
+
+
+
 
   <!-- Product Showcase -->
   <div class="container-fluid text-center">
     <div class="row">
-      <!-- Product 1 -->
       <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
         <div class="card">
-          <img class="card-img-top img-fluid" src="img/b.jpg" alt="Chocolate Cake">
+          <img class="card-img-top img-fluid" src="img/b.jpg" alt="Product Image">
           <div class="card-body">
             <h5 class="card-title">Chocolate Cake</h5>
             <p class="card-text">Moist and delicious chocolate cake.</p>
@@ -64,89 +59,106 @@
           </div>
         </div>
       </div>
-
-      <!-- Product 2 -->
       <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
         <div class="card">
-          <img class="card-img-top img-fluid" src="img/a.jpg" alt="Strawberry Cupcake">
+          <img class="card-img-top img-fluid" src="img/a.jpg" alt="Product Image">
           <div class="card-body">
             <h5 class="card-title">Strawberry Cupcake</h5>
             <p class="card-text">Sweet and tangy strawberry cupcake.</p>
-            <h5>₦1000 - <small class="text-danger text-decoration-line-through">₦1500</small></h5>
+                        <h5>₦1000 - <small class="text-danger text-decoration-line-through">₦1500</small></h5>
             <a href="#" class="btn btn-primary">Order Now</a>
           </div>
         </div>
       </div>
-
-      <!-- Product 3 -->
       <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
         <div class="card">
-          <img class="card-img-top img-fluid" src="img/c.jpg" alt="Vanilla Muffin">
+          <img class="card-img-top img-fluid" src="img/c.jpg" alt="Product Image">
           <div class="card-body">
             <h5 class="card-title">Vanilla Muffin</h5>
             <p class="card-text">Soft and fluffy vanilla muffin.</p>
-            <h5>₦500 - <small class="text-danger text-decoration-line-through">₦1000</small></h5>
+                        <h5>₦500 - <small class="text-danger text-decoration-line-through">₦1000</small></h5>
             <a href="#" class="btn btn-primary">Order Now</a>
           </div>
         </div>
       </div>
     </div>
-
-    <!-- Additional Products -->
-    <div class="row">
-      <!-- Product 4 -->
-      <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
-        <div class="card">
-          <img class="card-img-top img-fluid" src="img/d.jpg" alt="Vanilla Muffin">
-          <div class="card-body">
-            <h5 class="card-title">Vanilla Muffin</h5>
-            <p class="card-text">Soft and fluffy vanilla muffin.</p>
-            <h5>₦2,500 - <small class="text-danger text-decoration-line-through">₦4,000</small></h5>
-            <a href="#" class="btn btn-primary">Order Now</a>
+        <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
+          <div class="card">
+            <img class="card-img-top img-fluid" src="img/d.jpg" alt="Product Image">
+            <div class="card-body">
+              <h5 class="card-title">Vanilla Muffin</h5>
+              <p class="card-text">Soft and fluffy vanilla muffin.</p>
+                          <h5>₦2,500 - <small class="text-danger text-decoration-line-through">₦4,000</small></h5>
+              <a href="#" class="btn btn-primary">Order Now</a>
+            </div>
           </div>
         </div>
-      </div>
+              <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
+                <div class="card">
+                  <img class="card-img-top img-fluid" src="img/e.jpg" alt="Product Image">
+                  <div class="card-body">
+                    <h5 class="card-title">Vanilla Muffin</h5>
+                    <p class="card-text">Soft and fluffy vanilla muffin.</p>
+                   <h5>₦1500 - <small class="text-danger text-decoration-line-through">₦2000</small></h5>
+                    <a href="#" class="btn btn-primary">Order Now</a>
+                  </div>
+                </div>
+              </div>
+              </div>
+              
 
-      <!-- Product 5 -->
-      <div class="col-md-4 col-sm-6 col-xs-12 mb-2">
-        <div class="card">
-          <img class="card-img-top img-fluid" src="img/e.jpg" alt="Vanilla Muffin">
-          <div class="card-body">
-            <h5 class="card-title">Vanilla Muffin</h5>
-            <p class="card-text">Soft and fluffy vanilla muffin.</p>
-            <h5>₦1500 - <small class="text-danger text-decoration-line-through">₦2000</small></h5>
-            <a href="#" class="btn btn-primary">Order Now</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Contact Section -->
-  <div class="container-fluid bg-gray text-black text-center py-3">
+  <!-- Order Now Section -->
+  <div class="container-fluid bg-gray text-black text-center">
     <h2>Contact Us</h2>
-    <p>Call/Text: +2347046775605 or Email: <a href="mailto:contact@fatimasdelights.com">Contact Us</a></p>
+    <p>Call/Text: +2347046775605 or Email: <a href="pages/contact.html">
+      <!--Tab to edit-->
+    </br>Contact Us</a></p>
   </div>
 
   <!-- Footer -->
-  <footer class="bg-dark text-white pt-2 pb-2">
-    <div class="container text-center">
-      <!-- Social media links -->
-      <div class="mb-3">
-        <a href="#" class="btn btn-outline-light"><i class="fab fa-facebook-f text-primary"></i></a>
-        <a href="#" class="btn btn-outline-light"><i class="fab fa-tiktok text-black"></i></a>
-        <a href="#" class="btn btn-outline-light"><i class="fab fa-whatsapp text-success"></i></a>
-        <a href="#" class="btn btn-outline-light"><i class="fab fa-instagram"></i></a>
-      </div>
-      <p>© 2024 All rights reserved. Fatima's Delight.</p>
-    </div>
-  </footer>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-BOeEKh0zW9Sr7fAhaMA7Z1Ngn2vs2mQzAO6VZkPso5BfU8QQAhaTTEpCma8BJ5a1" crossorigin="anonymous"></script>
   
-  <!-- Font Awesome JS -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/js/all.min.js"></script>
+<footer class="bg-dark text-white pt-1 pb-1">
+  <div class="container text-center text-md-left">
+    <div class="row text-center text-md-left">
 
+
+
+      <!-- Social media links -->
+      <div class="col-md-5 col-lg-4 mt-2">
+        <div class="text-center">
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a href="#" class="btn btn-outline-light btn-floating">
+                <i class="fab fa-facebook-f text-primary"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="btn btn-outline-light btn-floating">
+                <i class="fab fa-tiktok text-black"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="btn btn-outline-light btn-floating">
+                <i class="fab fa-whatsapp text-success"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="btn btn-outline-light btn-floating">
+                <i class="fab fa-instagram "></i>
+              </a>
+            </li>
+          </ul>
+              <hr class="my-4 bg-light">
+                  <!-- Footer Bottom -->
+        <div class="row align-items-center mt-4 text-center">
+          <div class="col-md-7 col-lg-8">
+            <p class="text-white">© 2024 All rights reserved. Fatima's Delight.</p>
+      </div>
+    </div>
+  </div>
+</footer>
+  <script src="bootstrap5/js/bootstrap.bundle.min.js"></script>
+
+<script src='fontawsome6/js/all.js'></script>
 </body>
 </html>
