--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css">
-<link rel="stylesheet" href="fontawsome6/css/all.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -159,6 +159,6 @@
 </footer>
   <script src="bootstrap5/js/bootstrap.bundle.min.js"></script>
 
-<script src='fontawsome6/js/all.js'></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"></script>
 </body>
 </html>
